[package]
name = "discohub-dioxus"
version = "0.1.0"
authors = ["kyle <kylharrt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
surrealdb = "1.3.1"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["macros"] }
